// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label editable label 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled pf-m-editable"
  >
    <button
      class="pf-v6-c-label__content"
      type="button"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </button>
    <span
      class="pf-v6-c-label__actions"
    >
      <button
        aria-label="Close Something"
        class="pf-v6-c-button pf-m-plain pf-m-no-padding"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label editable label 2`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled pf-m-editable pf-m-editable-active"
  >
    <input
      class="pf-v6-c-label__content"
      id="editable-input"
      type="text"
      value="Something"
    />
  </span>
</DocumentFragment>
`;

exports[`Label label with additional class name 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled klass1"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with additional class name and props 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled class-1"
    data-label-name="something"
    id="label-1"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with blue color 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-blue pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with blue color with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-blue pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with close button 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
    <span
      class="pf-v6-c-label__actions"
    >
      <button
        aria-label="Close Something"
        class="pf-v6-c-button pf-m-plain pf-m-no-padding"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r0:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with close button and outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
    <span
      class="pf-v6-c-label__actions"
    >
      <button
        aria-label="Close Something"
        class="pf-v6-c-button pf-m-plain pf-m-no-padding"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with green color 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-green pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with green color with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-green pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with grey color 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with grey color with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with href 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled pf-m-clickable"
  >
    <a
      class="pf-v6-c-label__content pf-m-clickable"
      href="#"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </a>
  </span>
</DocumentFragment>
`;

exports[`Label label with href with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-outline pf-m-clickable"
  >
    <a
      class="pf-v6-c-label__content pf-m-clickable"
      href="#"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </a>
  </span>
</DocumentFragment>
`;

exports[`Label label with orange color 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-orange pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with orange color with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-orange pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with purple color 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-purple pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with purple color with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-purple pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with red color 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-red pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with red color with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-red pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with teal color 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-teal pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with teal color with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-teal pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with truncation 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
        style="--pf-v6-c-label__text--MaxWidth: 16ch;"
      >
        textMaxWidth set at 16ch on this very long label that should be truncated
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with yellow color 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-yellow pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label label with yellow color with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-yellow pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label renders 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label renders with isCompact 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-filled pf-m-compact"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label renders with outline variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-label pf-m-outline"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Label renders with variant overflow and type is set to button  1`] = `
<DocumentFragment>
  <button
    class="pf-v6-c-label pf-m-overflow"
    type="button"
  >
    <span
      class="pf-v6-c-label__content"
    >
      <span
        class="pf-v6-c-label__text"
      >
        Something
      </span>
    </span>
  </button>
</DocumentFragment>
`;
